ES3 sampler types and their corresponding textures should be initialized before being sampled.

BUG=666145
TEST=webgl2_conformance (to be added)
R=kbr@chromium.org,piman@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2503403003
Cr-Commit-Position: refs/heads/master@{#432740}

Former-commit-id: 5e6600b56cad269e4a8640c330847a18f2b7df12