gpu/command_buffer/service/gles2_cmd_decoder.cc
@@ -1898,21 +1898,34 @@ class GLES2DecoderImpl : public GLES2Decoder, public ErrorStateClient {
                               GLsizei primcount);
 
   GLenum GetBindTargetForSamplerType(GLenum type) {
-    DCHECK(type == GL_SAMPLER_2D || type == GL_SAMPLER_CUBE ||
-           type == GL_SAMPLER_EXTERNAL_OES || type == GL_SAMPLER_2D_RECT_ARB);
     switch (type) {
       case GL_SAMPLER_2D:
+      case GL_SAMPLER_2D_SHADOW:
+      case GL_INT_SAMPLER_2D:
+      case GL_UNSIGNED_INT_SAMPLER_2D:
         return GL_TEXTURE_2D;
       case GL_SAMPLER_CUBE:
+      case GL_SAMPLER_CUBE_SHADOW:
+      case GL_INT_SAMPLER_CUBE:
+      case GL_UNSIGNED_INT_SAMPLER_CUBE:
         return GL_TEXTURE_CUBE_MAP;
       case GL_SAMPLER_EXTERNAL_OES:
         return GL_TEXTURE_EXTERNAL_OES;
       case GL_SAMPLER_2D_RECT_ARB:
         return GL_TEXTURE_RECTANGLE_ARB;
+      case GL_SAMPLER_3D:
+      case GL_INT_SAMPLER_3D:
+      case GL_UNSIGNED_INT_SAMPLER_3D:
+        return GL_TEXTURE_3D;
+      case GL_SAMPLER_2D_ARRAY:
+      case GL_SAMPLER_2D_ARRAY_SHADOW:
+      case GL_INT_SAMPLER_2D_ARRAY:
+      case GL_UNSIGNED_INT_SAMPLER_2D_ARRAY:
+        return GL_TEXTURE_2D_ARRAY;
+      default:
+        NOTREACHED();
+        return 0;
     }
-
-    NOTREACHED();
-    return 0;
   }
 
   // Gets the framebuffer info for a particular target.
